--- a/src/SalasDeReuniaoCRUD.Infra.Data/SalasDeReuniaoCRUD.Infra.Data.csproj
+++ b/src/SalasDeReuniaoCRUD.Infra.Data/SalasDeReuniaoCRUD.Infra.Data.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.8" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.8" />
@@ -17,10 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SalasDeReuniaoCRUD.Domain\SalasDeReuniaoCRUD.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Mappings\" />
   </ItemGroup>
 
 </Project>
