--- a/src/SalasDeReuniaoCRUD.Domain/SalasDeReuniaoCRUD.Domain.csproj
+++ b/src/SalasDeReuniaoCRUD.Domain/SalasDeReuniaoCRUD.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SalasDeReuniaoCRUD.Domain.Core\SalasDeReuniaoCRUD.Domain.Core.csproj" />
   </ItemGroup>
 
